# Magic-Elephant

./: LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/NewConnectionDialog/: NewConnectionDialog.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/ui/: accordion.tsx
src/lib/: types.ts  useStore.ts
src/routes/: connection.tsx  connections.tsx
