[package]
name = "magic_elephant"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = "1.36.0"
tokio-postgres = { version = "0.7.1", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
indexmap = { version = "1.7.0", features = ["serde-1"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
